--- a/the_task1/style.css
+++ b/the_task1/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('dev.jpg') ;
+    background: linear-gradient(45deg, #4facfe, #00f2fe);
     margin: 0;
     background-size: cover;
     padding: 0;
@@ -7,12 +7,22 @@ body {
     background-attachment: fixed;
 
 }
-h3 {
+h2 {
     color:white;
     margin: 35px;
+    font-size: 50px;
+    margin-top: 70px;
+    margin-left: 30px;
+    font-weight: normal;
+    font-family: sans-serif;
 }
-h1 {
+p {
     color: white;
-    margin-top: 1px;
-    background-color: orange;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+img {
+    float: right;
+    height: 400px;
+    width: 400px;
 }
